<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".activities.LoginActivity">
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">

        <ImageView
            android:id="@+id/iconIV"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:src="@drawable/read_ox_new"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconIV"
            android:layout_centerHorizontal="true"
            android:text="@string/pleaseLogin"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:fontFamily="sans-serif-black"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_above="@+id/noAccountTV"
        android:layout_marginTop="225dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                >
                <EditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_email_gray"
                    android:hint="@string/hintEmail"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                android:layout_below="@+id/emailTil"
                android:layout_marginTop="5dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                >
                <EditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_lock_gray"
                    android:hint="Password"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    />
            </com.google.android.material.textfield.TextInputLayout>

<!--            <TextView-->
<!--                android:id="@+id/forgotTV"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Forgot Password?"-->
<!--                android:textColor="@color/darkgray"-->
<!--                android:layout_below="@+id/passwordTil"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:padding="5dp"/>-->

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordTil"
                android:text="@string/btnTxtLogin"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_btn01"/>
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/noAccountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:textSize="20sp"
        android:text="@string/new_user_signup"
        android:textColor="@color/black"/>
</RelativeLayout>