<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".activities.PdfListAdminActivity">

    <RelativeLayout
        android:id="@+id/emptyDataView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:layout_gravity="center"
            android:src="@drawable/ic_empty_sad_face"
            />

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/labelNoBooksFound"
             android:textAlignment="center"
             android:textSize="16sp"
             android:textColor="@color/black"
             android:layout_marginTop="5dp"
             />

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back_white"
            android:background="@android:color/transparent"
            android:layout_marginStart="10dp"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:text="@string/labelBookList"
            android:layout_marginTop="8dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/subtitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/titleTV"
            android:textColor="@color/white"
            android:text="Category"
            android:layout_marginTop="4dp"
             />

    </RelativeLayout>
    <EditText
        android:id="@+id/searchET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarRl"
        android:hint="@string/labelSearchBook"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_search_gray"
        android:padding="10dp"
        android:background="@drawable/shape_edittext01"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="@color/gray"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bookRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_below="@+id/searchET"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_pdf_admin_list"/>

</RelativeLayout>