<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".activities.DashboardAdminActivity">

    <RelativeLayout
        android:id="@+id/emptyDataView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"

                android:layout_gravity="center"
                android:src="@drawable/ic_empty_sad_face"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelNoCategoryFound"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                />

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/subTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_below="@+id/titleTV"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"/>
        <ImageView
            android:id="@+id/logoutIVBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logout_white"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:background="@android:color/transparent"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/searchET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarRl"
        android:hint="@string/labelSearchCategory"
        android:drawableStart="@drawable/ic_search_gray"
        android:padding="10dp"
        android:background="@drawable/shape_edittext01"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="@color/gray"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoriesRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottomLl"
            android:layout_below="@+id/searchET"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_category" />
    <LinearLayout
        android:id="@+id/bottomLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/addCategoryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAddCategory"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_btn01"
            android:minHeight="50dp"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addPdfBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_book"
            app:tint="@color/white"
            app:borderWidth="0dp"
            app:fabCustomSize="50dp"
            android:backgroundTint="@color/brightBlue"/>

    </LinearLayout>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>